momentuHMM 1.3.0 2017-12-06
-----------------
NEW FEATURES

* Dynamic activity centers (i.e., those with coordinates that can change over time) can now be handled via the centroids argument in prepData and simData. An example based on the group dynamic model of Langrock et al. (2014) has been added to the vignette.

* initialPosition argument in simData can now be specified as a list indicating the initial position for each individual

CHANGES

* multinomial logit link now used on zeroInflation and oneInflation parameters

* bug fix in calculation of pseudo-residuals (pseudoRes) with zeroInflation and/or oneInflation

* bug fix in CIreal when natural scale delta estimates are near boundary

* bug fix in crawlWrap when predTime is of length one

* bug fix in MIpool when initial distribution includes covariates

* splines and splines2 package dependencies changed to Suggests in DESCRIPTION file


momentuHMM 1.2.0 2017-10-19
-----------------
NEW FEATURES

* Regression formulas can now be specified for the initial distributions of HMMs using the formulaDelta argument in fitHMM, MIfitHMM, and simData. These changes are backwards compatible with previous versions, but note that the number and order of arguments has been changed in fitHMM, MIfitHMM, and simData.

Changes

* If step length is zero at time t or t+1, simData and prepData now return NA for turning angle at time step t 

* bug fix in pseudoRes such that pseudo-residuals now "reset" for each individual

* bug fix in fitHMM when using fixPar to fix initial distribution (delta)

* bug fix in fitHMM when nbStates=1 and circularAngleMean=TRUE

* bug fix in fitHMM when nbStates=1 and retryFits>0


momentuHMM 1.1.1 2017-09-19
-----------------
NEW FEATURES

* Normal (Gaussian) and Bernoulli distributions can now be specified for data streams

* Harbour seal example of McClintock et al (2013) added to vignette

Changes

* added pseudoRes continuity adjustment for discrete distributions


momentuHMM 1.1.0 2017-08-15