@@ -13,6 +13,7 @@ export(CIbeta)
 export(CIreal)
 export(MIfitHMM)
 export(MIpool)
+export(checkPar0)
 export(circAngles)
 export(crawlMerge)
 export(crawlWrap)
