@@ -1,3 +1,10 @@
+momentuHMM 1.3.1 2017-12-11
+-----------------
+NEW FEATURES
+
+* checkPar0 function added to aid users with initial parameter (e.g. Par0, beta0, delta0) specification
+
+
 momentuHMM 1.3.0 2017-12-06
 -----------------
 NEW FEATURES
